--- a/index.html
+++ b/index.html
@@ -7,44 +7,44 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bai+Jamjuree:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
-    <title>Sobre Moda</title>
+    <title>Carros</title>
 </head>
 <body>
     <main>
         <div class="passo ativo" id="passo-0">
             <img src="img/cenario-passo0.png" alt="">
-            <p>Escolha um desfile de moda</p>
-            <button class="btn-proximo" data-proximo="1">São Paulo Fashion Week</button>
-            <button class="btn-proximo" data-proximo="2">Fashion Week Paris</button>
+            <p>Você prefere CARRO ou MOTO?</p>
+            <button class="btn-proximo" data-proximo="1">CARRO</button>
+            <button class="btn-proximo" data-proximo="2">MOTO</button>
         </div>
         <div class="passo" id="passo-1">
-            <p>Qual ESTILO você prefere?</p>
-            <button class="btn-proximo" data-proximo="3">DESCOLADO</button>
-            <button class="btn-proximo" data-proximo="4">ELEGANTE</button>
+            <p>Qual ESTILO de carro você prefere?</p>
+            <button class="btn-proximo" data-proximo="3">Claro</button>
+            <button class="btn-proximo" data-proximo="4">Escuro</button>
         </div>
         <div class="passo" id="passo-2">
             <p>Qual estilo PARISIENSE você prefere?</p>
-            <button class="btn-proximo" data-proximo="5">Antigo</button>
-            <button class="btn-proximo" data-proximo="6">Atual</button>
+            <button class="btn-proximo" data-proximo="5">cross</button>
+            <button class="btn-proximo" data-proximo="6">street</button>
         </div>
         <div class="passo" id="passo-3">
-             <img src="img/roupa de praia.png" alt="praia">
-            <p>Este é o LOOK que eu indico:</p>
+             <img src="img/roupa de praia.png" alt="claro">
+            <p>Este é o carro que eu indico:</p>
         </div>
 
         <div class="passo" id="passo-4">
-            <img src="img/roupa chique.png" alt="chique">
-            <p>Este é o LOOK que eu indico:</p>
+            <img src="img/roupa chique.png" alt="escuro">
+            <p>Este é o carro que eu indico:</p>
         </div>
 
         <div class="passo" id="passo-5">
-          <img src="img/roupa antiga.png" alt="antiga">
-            <p>Este é o LOOK que eu indico:</p>
+          <img src="img/roupa antiga.png" alt="cross">
+          <p>Este é a moto que eu indico:</p>
         </div>
 
         <div class="passo" id="passo-6">
-            <img src="img/roupa atual.png" alt="atual">
-            <p>Este é o LOOK que eu indico:</p>
+            <img src="img/roupa atual.png" alt="street">
+             <p>Este é a moto que eu indico:</p>
         </div>
     </main>
     <script src="script.js"></script>
