--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <button class="btn-proximo" data-proximo="4">Escuro</button>
         </div>
         <div class="passo" id="passo-2">
-            <p>Qual estilo PARISIENSE você prefere?</p>
+            <p>Qual estilo de MOTO você prefere?</p>
             <button class="btn-proximo" data-proximo="5">cross</button>
             <button class="btn-proximo" data-proximo="6">street</button>
         </div>
