--- a/index.html
+++ b/index.html
@@ -24,26 +24,26 @@
         </div>
         <div class="passo" id="passo-2">
             <p>Qual estilo de MOTO você prefere?</p>
-            <button class="btn-proximo" data-proximo="5">cross</button>
-            <button class="btn-proximo" data-proximo="6">street</button>
+            <button class="btn-proximo" data-proximo="5">alta</button>
+            <button class="btn-proximo" data-proximo="6">baixa</button>
         </div>
         <div class="passo" id="passo-3">
-             <img src="img/roupa de praia.png" alt="claro">
+             <img src="carro claro.jpg" alt="claro">
             <p>Este é o carro que eu indico:</p>
         </div>
 
         <div class="passo" id="passo-4">
-            <img src="img/roupa chique.png" alt="escuro">
+            <img src="carro claro.webp" alt="escuro">
             <p>Este é o carro que eu indico:</p>
         </div>
 
         <div class="passo" id="passo-5">
-          <img src="img/roupa antiga.png" alt="cross">
+          <img src="moto 01.jpg" alt="cross">
           <p>Este é a moto que eu indico:</p>
         </div>
 
         <div class="passo" id="passo-6">
-            <img src="img/roupa atual.png" alt="street">
+            <img src="moto 02.jpg" alt="street">
              <p>Este é a moto que eu indico:</p>
         </div>
     </main>
